# edukaai-studio

./: .bandit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  SECURITY.md  build.sh  create-app.sh  install.sh  launch.sh  mypy.ini  one-line-install.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run.py  run_all_tests.py  setup.cfg  setup.py  test_description_tags.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
backend/: requirements.txt  run.py
backend/app/: config.py  main.py  models.py
backend/app/core/: __init__.py  exceptions.py  logging.py
backend/app/ml/: __init__.py  trainer.py
backend/app/routers/: __init__.py  chat.py  datasets.py  models.py  training.py
backend/storage/app/: edukaai.db
backend/storage/datasets/: 224035d2-ab08-4bed-b21e-6aeca30febfc.jsonl  e8f42608-cbda-4768-8854-0da692993fa4.jsonl
backend/test_data/: train.jsonl
backend/tests/: test_custom_models.py  test_delete_custom_model.py  test_download_bug_catcher.py  test_model_download.py  test_model_download_integration.py  test_notes_field_real_data.py  test_security.py  test_training_curves.py  test_update_training_run.py
examples/: logging_examples.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: ExportPanel.vue  LogViewer.vue  Toast.vue
frontend/src/composables/: useToast.ts
frontend/src/router/: index.ts
frontend/src/stores/: training.ts
frontend/src/utils/: messageSecurity.ts
frontend/src/views/: ConfigureTrainingView.vue  DatasetsView.vue  DualChatView.vue  MyModelsView.vue  SummaryView.vue  TrainingView.vue
scripts/: lora-train.py  security_scan.py  verify_models.py
src/edukaai_studio/: __init__.py  config.py  main.py  main_simplified.py
src/edukaai_studio/core/: __init__.py  logging.py  state.py  trained_models_registry.py
src/edukaai_studio/ui/: __init__.py  adapter_manager.py  chat_wrapper.py  debug_logger.py  hf_model_validator.py  resource_monitor.py  training_monitor.py  training_scanner.py  user_config.py  visualizations.py
src/edukaai_studio/ui/tabs/: __init__.py  chat.py  configure.py  models.py  my_models.py  results.py  train.py  upload.py
src/edukaai_studio/utils/: __init__.py
tests/: README.md  TEST_MY_MODELS_GUIDE.md  bug_hunter.py  bug_hunter_realistic.py  conftest.py  test_core.py  test_integration.py  test_my_models.py  test_realistic.py  test_security.py  test_tabs.py  test_ui_components.py  verify_tests.py
tests/browser/: COMPREHENSIVE_TESTS.md  README.md  conftest.py  run_all_browser_tests.py  test_chat.py  test_configure.py  test_errors.py  test_models.py  test_my_models.py  test_results.py  test_state.py  test_train.py  test_train_status.py  test_upload.py  test_workflow.py
tests/contracts/: test_interface_contracts.py
tests/integration/: README.md  conftest.py  test_completion_state_sync.py  test_output_matching.py  test_race_condition.py  test_runtime_execution.py  test_stale_state_bug.py  test_state_sync_bug.py  test_training_integration.py  test_training_mock.py  test_ui_data_flow.py
tests/property/: test_hypothesis_properties.py
tests/unit/: test_functional.py  test_training_completion.py
tests/visual/: test_visual_regression.py
