[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edukaai-studio"
version = "0.1.0"
description = "Desktop application for fine-tuning language models using LoRA on Apple Silicon Macs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "EdukaAI Studio Contributors"}
]
keywords = [
    "machine-learning",
    "fine-tuning",
    "lora",
    "mlx",
    "apple-silicon",
    "llm",
    "gradio",
    "transformers",
    "apple",
    "macos",
    "mps",
    "neural-networks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mlx>=0.15.0",
    "mlx-lm>=0.8.0",
    "transformers>=4.38.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/edukaai-studio"
Documentation = "https://github.com/yourusername/edukaai-studio#readme"
Repository = "https://github.com/yourusername/edukaai-studio"
Issues = "https://github.com/yourusername/edukaai-studio/issues"
Changelog = "https://github.com/yourusername/edukaai-studio/blob/main/CHANGELOG.md"

[project.scripts]
edukaai-studio = "edukaai_studio.main_simplified:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["edukaai_studio*"]
exclude = ["tests*", "tests.*", "docs*", "data*", "outputs*"]

[tool.setuptools.package-data]
edukaai_studio = ["*.json", "*.yaml", "*.yml", "*.txt"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | outputs
  | training_history
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    ".venv",
    "venv",
    "env",
    ".eggs",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "data",
    "outputs",
]
known_first_party = ["edukaai_studio"]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "data/",
    "outputs/",
    ".venv/",
]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/edukaai_studio"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Flake8 configuration (for reference, actually configured in .flake8 or setup.cfg)
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    "venv",
    "env",
    ".eggs",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "data",
    "outputs",
]
per-file-ignores = [
    "__init__.py:F401",
]

# Bandit security linter
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert warnings and wildcard imports
