[metadata]
name = edukaai-studio
version = 0.1.0
description = Desktop application for fine-tuning language models using LoRA on Apple Silicon Macs
long_description = file: README.md
long_description_content_type = text/markdown
author = EdukaAI Studio Contributors
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Education

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    mlx>=0.15.0
    mlx-lm>=0.8.0
    transformers>=4.38.0
    numpy>=1.24.0
    pyyaml>=6.0
    gradio>=4.0.0
    matplotlib>=3.7.0

[options.packages.find]
where = src
exclude =
    tests
    tests.*
    docs
    docs.*
    data
    outputs
    training_history

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    isort>=5.12.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0

[options.entry_points]
console_scripts =
    edukaai-studio = edukaai_studio.main_simplified:main

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .venv,
    venv,
    env,
    .eggs,
    .git,
    __pycache__,
    build,
    dist,
    data,
    outputs,
    training_history
per-file-ignores =
    __init__.py:F401

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

[mutmut]
paths_to_mutate=src/edukaai_studio/
tests_dir=tests/
backup=False
runner=pytest
test_time_base_link=5.0
test_time_multiplier=2.0

[mutmut.optional]
# Enable all mutation operators
arithmatic_operator_replacement = True
comparison_operator_replacement = True
constant_replacement = True
expression_mutation = True
logical_operator_replacement = True
decorator_mutation = True
argument_default_mutation = True
assignment_mutation = True

[mutmut.files_to_exclude]
exclude_patterns =
    __pycache__
    *.pyc
    .git
    .venv
    build
    dist
    *.egg-info
    tests
    conftest.py
